Correction in many classes to use latest features of Java